tests/sema/golden/05_scopes.out
tests/sema/ok/05_scopes.sg:3:5: error: redeclaration of 'y'
    { let y:int = 1; }     // allowed if SHADOW_ALLOW; error if SHADOW_DENY
      ^
